# compiledb

./: .flake8  .gitignore  .travis.yml  README.md  compiledb-gen-aosp  compiledb-gen-make  compiledb-gen-parser  pyproject.toml  requirements-devel.txt  setup.py  test-requirements.txt  tox.ini
.circleci/: config.yml
.github/workflows/: publish.yml  test.yml
compiledb/: __init__.py  __main__.py  __version__.py  cli.py  compiler.py  generator.py  parser.py  utils.py
compiledb/commands/: make.py
examples/: compiledb-aosp.sh
sh-completion/: compiledb.bash
tests/: common.py  test_json_compdb.py  test_parser.py  test_template.py
tests/data/: autotools_simple.txt  compile_commands.json  compile_commands2.json  multiple_commands_oneline.txt
